# ED

./: .gitignore  CMakeLists.txt  EdisonDesigner.sln  README.md
Addons/: CMakeLists.txt  L-ShapeBracketModeler.py  L-shape bracket modeler.py  MSketch_parser.py  Sci_Box.py  clamping.py  control.py  shaft.py  transmission.py
Addons/ED_Truss/: Delete_pyc_files.bat  trussCreator.py  trussCreatorGui.py  trussCreatorGui.ui
Addons/ED_Truss/Examples/: examples.py
Addons/L-shape bracket modeler/: L-shape bracket modeler 사용법.txt  release note.txt
Addons/control_module/: ~$pictures.pptx
Data/: data 폴더 사용처.txt
ED_installer_script/: ED_installer_script.nsi  License.rtf  Run_Copy_process.bat  Run_Delete.bat  Version.nsi  vc2013_redist_download_link.txt
ED_installer_script/_Batch_files/: Compress_folders.bat  Copy_Addons_folder.bat  Copy_Ext_folder.bat  Copy_Mod_folder.bat  Copy_bin_folder.bat  Copy_data_folder.bat  Copy_doc_folder.bat  Copy_lib_folder.bat
Mod/Start/: Init.py
Mod/Web/: Init.py
cMake/: FindPySideTools.cmake  FreeCadMacros.cmake
data/examples/: CMakeLists.txt  KAIST_A1.FCStd  KAIST_A1_Body.FCStd  KAIST_A1_Rotation.FCStd  KAIST_A2.FCStd  KAIST_A2_Bar.FCStd  KAIST_A2_Bolt.FCStd  KAIST_A2_DM.FCStd  KAIST_A2_Nut.FCStd  KAIST_A2_Plate.FCStd
src/: CMakeLists.txt  EDConfig.h  Version.h
src/App/: App.vcxproj  App.vcxproj.filters  Application.cpp  Application.h  ApplicationPy.cpp  CMakeLists.txt  ComplexGeoData.h  ComplexGeoDataPy.cpp  ComplexGeoDataPy.h  ComplexGeoDataPy.xml  Document.cpp  Document.h  DocumentObject.cpp  DocumentObject.h  DocumentObjectGroupPy.cpp  DocumentObjectGroupPy.h  DocumentObjectGroupPy.xml  DocumentObjectGroupPyImp.cpp  DocumentObjectPy.cpp  DocumentObjectPy.h  DocumentObjectPy.xml  DocumentObjectPyImp.cpp  DocumentObserver.cpp  DocumentObserver.h  DocumentPy.cpp  DocumentPy.h  DocumentPy.xml  DocumentPyImp.cpp  DynamicProperty.cpp  EDApp.vcxproj  EDApp.vcxproj.filters  EDInit.py  EDTest.py  EdisonDesignerInit.py  Enumeration.h  Expression.cpp  Expression.h  ExpressionParser.y  ExpressionVisitors.h  FeatureCustom.h  (+31 more)
src/Base/: AxisPy.cpp  AxisPy.h  AxisPy.xml  AxisPyImp.cpp  Base.vcxproj  Base.vcxproj.filters  BaseClass.cpp  BaseClass.h  BaseClassPy.cpp  BaseClassPy.h  BaseClassPy.xml  Base_debug.props  BoundBoxPy.cpp  BoundBoxPy.h  BoundBoxPy.xml  BoundBoxPyImp.cpp  Builder3D.cpp  Builder3D.h  CMakeLists.txt  Console.cpp  Console.h  Debugger.cpp  EDBase.vcxproj  EDBase.vcxproj.filters  Exception.cpp  Exception.h  Factory.cpp  Factory.h  FileInfo.cpp  FileInfo.h  FileTemplate.cpp  FutureWatcherProgress.h  GeometryPyCXX.h  Handle.cpp  InputSource.cpp  Interpreter.cpp  Interpreter.h  MatrixPy.cpp  MatrixPy.h  MatrixPy.xml  (+63 more)
src/Example_data/: Example_data.vcxproj  Example_data.vcxproj.filters
src/Example_data/examples/: Connecting_rod.FCStd
src/Gui/: AboutApplication.ui  Action.cpp  Action.h  Application.cpp  Application.h  ApplicationPy.cpp  Assistant.cpp  AutoSaver.h  BitmapFactory.cpp  BitmapFactory.h  BlenderNavigationStyle.cpp  CADNavigationStyle.cpp  CMakeLists.txt  CallTips.cpp  Clipping.cpp  Clipping.h  CombiView.cpp  Command.cpp  Command.h  CommandDoc.cpp  CommandStd.cpp  CommandTest.cpp  CommandView.cpp  CommandWindow.cpp  Control.cpp  Control.h  DemoMode.cpp  DlgActionsImp.cpp  DlgActivateWindowImp.cpp  DlgCommandsImp.cpp  DlgCustomizeImp.cpp  DlgCustomizeSpaceball.cpp  DlgDisplayPropertiesImp.cpp  DlgEditFileIncludeProptertyExternal.cpp  DlgEditorImp.cpp  DlgExpressionInput.cpp  DlgExpressionInput.h  DlgGeneralImp.cpp  DlgInputDialogImp.cpp  DlgKeyboardImp.cpp  (+354 more)
src/Gui/3Dconnexion/: GuiApplicationNativeEventAwareWin32.cpp
src/Gui/Icons/: edisondesigner.xpm  freecad.xpm  resource.qrc  resource.qrc.depends
src/Gui/Inventor/: SoAutoZoomTranslation.cpp  SoAxisCrossKit.cpp  SoDrawingGrid.cpp  SoFCBoundingBox.cpp  SoFCDB.cpp  SoFCDB.h  SoFCInteractiveElement.cpp  SoFCOffscreenRenderer.cpp  SoFCSelection.cpp  SoFCSelection.h  SoFCSelectionAction.cpp  SoFCSelectionAction.h  SoFCUnifiedSelection.cpp  SoFCUnifiedSelection.h  SoFCVectorizeSVGAction.cpp  SoFCVectorizeU3DAction.cpp  SoTextLabel.cpp
src/Gui/Language/: FreeCAD_ko.qm  FreeCAD_ko.ts  Translator.cpp  Translator.h  moc_Translator.cpp  translation.qrc  translation.qrc.depends
src/Gui/Quarter/: ContextMenu.cpp  Quarter.h  QuarterWidget.h  SoQTQuarterAdaptor.h  moc_ContextMenu.cxx  moc_ContextMenu.cxx_parameters  moc_InteractionMode.cxx  moc_InteractionMode.cxx_parameters  moc_QuarterWidget.cxx  moc_QuarterWidget.cxx_parameters  moc_SensorManager.cxx  moc_SensorManager.cxx_parameters  moc_SignalThread.cxx  moc_SignalThread.cxx_parameters
src/Gui/Stylesheets/: Dark-blue.qss  Dark-green.qss  Dark-orange.qss  Light-blue.qss  (+2 more)
src/Main/: CMakeLists.txt  EDGuiPy.cpp  EDGuiPy.vcxproj  EDMain.aps  EDMain.rc  EDMain.vcxproj  EDMain.vcxproj.filters  EDMainCmd.vcxproj  EDMainPy.vcxproj  EDMainPy.vcxproj.filters  EdisonDesignerGuiPy.cpp  GuiPy.vcxproj  GuiPy.vcxproj.filters  Main.vcxproj  Main.vcxproj.filters  MainCmd.cpp  MainCmd.vcxproj  MainCmd.vcxproj.filters  MainGui.cpp  MainPy.cpp  MainPy.vcxproj  MainPy.vcxproj.filters  edisondesigner.rc  freecad.aps  resource.h
src/Mod/: CMakeLists.txt
src/Mod/Start/: CMakeLists.txt  Init.py  InitGui.py
src/Mod/Start/App/: AppStart.cpp  CMakeLists.txt  PreCompiled.h  Start.vcxproj  Start.vcxproj.filters  StartConfiguration.h
src/Mod/Start/Gui/: AppStartGui.cpp  CMakeLists.txt  Command.cpp  PreCompiled.h  StartGui.vcxproj  StartGui.vcxproj.filters  Workbench.cpp  qrc_Start.cxx
src/Mod/Start/Gui/Resources/: Start.qrc
src/Mod/Start/Gui/Resources/translations/: StartPage_ko.qm  StartPage_ko.ts
src/Mod/Start/StartPage/: DefaultWorkbench.py  LoadA1.py  LoadA2.py  LoadConnectingRod.py  LoadConnectingRodExample.py  LoadMRU0.py  LoadMRU2.py  LoadSchenkel.py  LoadSelfieStickExample.py  Mesh.py  Part.py  PartDesign.py  Sketcher.py  StartPage.css  StartPage.html  StartPage.py  TranslationTexts.py
src/Tools/: EdisonDesignerTest.py  MakeMacBundleRelocatable.py  MakeNewBuildNbr.py  fcbt.py
src/zipios++/: zipios-config.h
(+574 files in other folders)
