
SET(Addons_Files
    clamping.py
    control.py
    shaft.py
    transmission.py
    MSketch_parser.py
    Sci_Box.py
    clamping_module/Hex_Bolt_Calculation.JPG
    clamping_module/Hex_Bolt_Model.JPG
    clamping_module/Hex_Bolt_Table_1.JPG
    clamping_module/Hex_Nut_Calculation.png
    clamping_module/Hex_Nut_Model.JPG
    clamping_module/Hex_Nut_Table_1.png
    clamping_module/pin.jpg
    clamping_module/pinfor.JPG
    clamping_module/Square_Bolt_Calculation.JPG
    clamping_module/Square_Bolt_Model.JPG
    clamping_module/Square_Bolt_Table_1.JPG
    clamping_module/Square_Nut_Calculation.png
    clamping_module/Square_Nut_Model.JPG
    clamping_module/Square_Nut_Table_1.png
    control_module/1.JPG
    control_module/2.JPG
    control_module/Compressive_Spring_Calculation.JPG
    control_module/Compressive_Spring_Model.JPG
    control_module/Compressive_Spring_Properties.JPG
    control_module/Drum_Brake_Calculation.JPG
    control_module/Drum_Brake_Model.JPG
    control_module/Drum_Brake_Table1.jpg
    control_module/Flat_Belt_Calculation.JPG
    control_module/Flat_Belt_Model.JPG
    control_module/Spur_Gear_Calculation.JPG
    control_module/Spur_Gear_Mechanical_Properties.jpg
    control_module/Spur_Gear_Model.JPG
    control_module/Spur_Gear_Module.jpg
    control_module/Spur_Gear_Tooth.png
    control_module/Torsion_Bar_Calculation.JPG
    control_module/Torsion_Bar_Model.JPG
    shaft_module/6_1.PNG
    shaft_module/6_2.PNG
    shaft_module/6_3.PNG
    shaft_module/6_4.PNG
    shaft_module/6_4_1.PNG
    shaft_module/6_4_2.PNG
    shaft_module/6_5.PNG
    shaft_module/6_5_1.PNG
    shaft_module/6_6_1.PNG
    shaft_module/6_6_2.PNG
    shaft_module/bearing.JPG
    shaft_module/cal.JPG
    shaft_module/calfor.JPG
    shaft_module/end.JPG
    shaft_module/endfor.JPG
    shaft_module/Hollow_Shaft_Calculation.JPG
    shaft_module/Hollow_Shaft_Model.JPG
    shaft_module/Iron_Properties.JPG
    shaft_module/Key_table.JPG
    shaft_module/Key_Calculation.JPG
    shaft_module/Key_Model.jpg
    shaft_module/Pin_Calculation.JPG
    shaft_module/Pin_model.JPG
    shaft_module/Pin_model2.JPG
    shaft_module/Shaft_Calculation.JPG
    shaft_module/Shaft_Model.JPG
    shaft_module/Solid_Shaft_Calculation.JPG
    shaft_module/Solid_Shaft_Model.JPG
    shaft_module/Universal_Joint_Calculation.png
    shaft_module/Universal_Joint_Model.png
    transmission_module/Flat_Belt_Calculation.JPG
    transmission_module/Flat_Belt_Model.JPG
    transmission_module/Spur_Gear_Calculation.JPG
    transmission_module/Spur_Gear_Mechanical_Properties.jpg
    transmission_module/Spur_Gear_Model.JPG
    transmission_module/Spur_Gear_Module.jpg
    transmission_module/Spur_Gear_Tooth.png
    sci_box/0.JPG
    sci_box/00.JPG
    sci_box/angle/10.jpg
    sci_box/angle/11.jpg
    sci_box/angle/132.jpg
    sci_box/angle/6.jpg
    sci_box/angle/7.jpg
    sci_box/angle/8.jpg
    sci_box/angle/9.jpg
    sci_box/bearing/110.jpg
    sci_box/bearing/76.jpg
    sci_box/bearing/77.JPG
    sci_box/bearing/78.JPG
    sci_box/bearing/79.JPG
    sci_box/bolt/177.jpg
    sci_box/bolt/41.jpg
    sci_box/bolt/65.jpg
    sci_box/bolt/66.jpg
    sci_box/bolt/67.jpg
    sci_box/bracket/13.jpg
    sci_box/bracket/133.jpg
    sci_box/bracket/14.jpg
    sci_box/bracket/15.jpg
    sci_box/bracket/16.jpg
    sci_box/bracket/16A.jpg
    sci_box/bracket/17.jpg
    sci_box/bracket/70.jpg
    sci_box/bracket/72.jpg
    sci_box/bracket/74.jpg
    sci_box/bracket/75.jpg
    sci_box/chain/104.jpg
    sci_box/chain/104A.jpg
    sci_box/etc/busing/112.jpg
    sci_box/etc/busing/138.jpg
    sci_box/etc/busing/139.jpg
    sci_box/etc/busing/139A.JPG
    sci_box/etc/busing/161.jpg
    sci_box/etc/busing/52.jpg
    sci_box/etc/nasa/57.jpg
    sci_box/etc/nasa/58.jpg
    sci_box/etc/tire/94.jpg
    sci_box/etc/tire/107.jpg
    sci_box/etc/tire/151.jpg
    sci_box/etc/tire/152.jpg
    sci_box/etc/100.jpg
    sci_box/etc/100A.jpg
    sci_box/etc/111.jpg
    sci_box/etc/147.jpg
    sci_box/etc/167.JPG
    sci_box/etc/171.JPG
    sci_box/etc/39.jpg
    sci_box/etc/46.jpg
    sci_box/etc/53.jpg
    sci_box/etc/64.jpg
    sci_box/etc/68.jpg
    sci_box/etc/69.jpg
    sci_box/etc/73.jpg
    sci_box/etc/77.jpg
    sci_box/etc/86.jpg
    sci_box/etc/97.jpg
    sci_box/etc_plate/12.jpg
    sci_box/etc_plate/30.jpg
    sci_box/etc_plate/87.jpg
    sci_box/flat_plate/129.jpg
    sci_box/flat_plate/130.jpg
    sci_box/flat_plate/131.jpg
    sci_box/flat_plate/55.jpg
    sci_box/flat_plate/56.jpg
    sci_box/flat_plate/60.jpg
    sci_box/flat_plate/61.jpg
    sci_box/flat_plate/62.jpg
    sci_box/flat_plate/63.jpg
    sci_box/flat_plate/71.jpg
    sci_box/gear/105.jpg
    sci_box/gear/106.jpg
    sci_box/gear/140.jpg
    sci_box/gear/141.jpg
    sci_box/gear/143.jpg
    sci_box/gear/32.jpg
    sci_box/gear/33.jpg
    sci_box/gear/34.jpg
    sci_box/gear/35.jpg
    sci_box/gear/36.jpg
    sci_box/gear/37.jpg
    sci_box/nut/42.jpg
    sci_box/pinion/142.jpg
    sci_box/plange_plate/50.jpg
    sci_box/plange_plate/51.jpg
    sci_box/plange_plate/109.jpg
    sci_box/plange_plate/168.jpg
    sci_box/plange_plate/169.jpg
    sci_box/plastic_plate/102.jpg
    sci_box/plastic_plate/103.jpg
    sci_box/plastic_plate/134.jpg
    sci_box/plastic_plate/80.jpg
    sci_box/plastic_plate/81.jpg
    sci_box/plastic_plate/82.jpg
    sci_box/plastic_plate/83.jpg
    sci_box/plastic_plate/84.jpg
    sci_box/plastic_plate/85.jpg
    sci_box/pulley/144.jpg
    sci_box/pulley/145.jpg
    sci_box/pulley/26.jpg
    sci_box/pulley/27.jpg
    sci_box/pulley/28.jpg
    sci_box/pulley/29.jpg
    sci_box/rack/108.jpg
    sci_box/rack/148.jpg
    sci_box/screw/54.jpg
    sci_box/screw/54A.jpg
    sci_box/shaft/18.jpg
    sci_box/shaft/19.jpg
    sci_box/shaft/20.jpg
    sci_box/shaft/21.jpg
    sci_box/shaft/22.jpg
    sci_box/shaft/23.jpg
    sci_box/shaft/24.jpg
    sci_box/shaft/25.jpg
    sci_box/shaft/137.jpg
    sci_box/strip/1.jpg
    sci_box/strip/127.jpg
    sci_box/strip/128.jpg
    sci_box/strip/2.jpg
    sci_box/strip/3.jpg
    sci_box/strip/4.jpg
    sci_box/strip/47.jpg
    sci_box/strip/48.jpg
    sci_box/strip/49.jpg
    sci_box/strip/5.jpg
    sci_box/strip/59.jpg
    sci_box/strip/88.jpg
    sci_box/strip/89.jpg
    sci_box/strip/90.jpg
    sci_box/strip/91.jpg
    sci_box/strip/92.jpg
    sci_box/strip/93.jpg
    sci_box/user/ex1.jpg
    sci_box/user/ex12.jpg
    sci_box/user/ex2.jpg
    sci_box/user/ex3.jpg
    sci_box/user/ex4.jpg
    sci_box/user/ex5.jpg
    sci_box/user/ex6.jpg
    sci_box/user/ex8.jpg
    sci_box/user/ex9.jpg
    sci_box/washer/43.jpg
    sci_box/washer/44.jpg
    L-ShapeBracketModeler.py
    L-ShapeBracketModeler/Background.png
    L-ShapeBracketModeler/EdisonDesigner_icon.png
    L-ShapeBracketModeler/Model_view.png
    L-ShapeBracketModeler/Side_view.png
)

ADD_CUSTOM_TARGET(Addons_data ALL
    SOURCES ${Addons_Files}
)

# 0001097: CMake stops with error "Circular ... <- ... dependency dropped."
if(NOT "${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
    fc_copy_sources(Addons_data "${CMAKE_BINARY_DIR}/Addons" ${Addons_Files})
endif()

if (WIN32 AND FREECAD_LIBPACK_USE)
    # pivy
    foreach (it ${FREECAD_LIBPACK_PIVY_COIN})
        get_filename_component(libfile ${it} NAME)
        set(out "${CMAKE_BINARY_DIR}/lib/pivy/${libfile}")
        add_custom_command(
            DEPENDS   ${it}
            OUTPUT    ${out}
            COMMAND   ${CMAKE_COMMAND}
            ARGS      -E copy_if_different ${it} ${out}
            MAIN_DEPENDENCY ${it}
            COMMENT   "Copy file to ${out}"
    )
    endforeach (it)
    SOURCE_GROUP("pivy" FILES ${FREECAD_LIBPACK_PIVY_COIN})

    # shiboken
    foreach (it ${FREECAD_LIBPACK_SHIBOKEN})
        get_filename_component(libfile ${it} NAME)
        set(out "${CMAKE_BINARY_DIR}/lib/${libfile}")
        add_custom_command(
            DEPENDS   ${it}
            OUTPUT    ${out}
            COMMAND   ${CMAKE_COMMAND}
            ARGS      -E copy_if_different ${it} ${out}
            MAIN_DEPENDENCY ${it}
            COMMENT   "Copy file to ${out}"
    )
    endforeach (it)
    SOURCE_GROUP("Shiboken" FILES ${FREECAD_LIBPACK_SHIBOKEN})

    # PySide
    foreach (it ${FREECAD_LIBPACK_PYSIDE})
        get_filename_component(libfile ${it} NAME)
        set(out "${CMAKE_BINARY_DIR}/lib/PySide/${libfile}")
        add_custom_command(
            DEPENDS   ${it}
            OUTPUT    ${out}
            COMMAND   ${CMAKE_COMMAND}
            ARGS      -E copy_if_different ${it} ${out}
            MAIN_DEPENDENCY ${it}
            COMMENT   "Copy file to ${out}"
    )
    endforeach (it)
    SOURCE_GROUP("PySide" FILES ${FREECAD_LIBPACK_PYSIDE})

    # PySide tools
    foreach (it ${FREECAD_LIBPACK_PYSIDEUIC})
        get_filename_component(libpath ${it} PATH)
        set(src "${FREECAD_LIBPACK_PYSIDEUIC_REL}/${it}")
        if("${libpath}" STREQUAL "pysideuic")
            set(FREECAD_LIBPACK_PYSIDEUIC_TOP ${FREECAD_LIBPACK_PYSIDEUIC_TOP} ${src})
        elseif("${libpath}" STREQUAL "pysideuic/Compiler")
            set(FREECAD_LIBPACK_PYSIDEUIC_CMP ${FREECAD_LIBPACK_PYSIDEUIC_CMP} ${src})
        elseif("${libpath}" STREQUAL "pysideuic/port_v2")
            set(FREECAD_LIBPACK_PYSIDEUIC_PV2 ${FREECAD_LIBPACK_PYSIDEUIC_PV2} ${src})
        elseif("${libpath}" STREQUAL "pysideuic/port_v3")
            set(FREECAD_LIBPACK_PYSIDEUIC_PV3 ${FREECAD_LIBPACK_PYSIDEUIC_PV3} ${src})
        elseif("${libpath}" STREQUAL "pysideuic/widget-plugins")
            set(FREECAD_LIBPACK_PYSIDEUIC_WPL ${FREECAD_LIBPACK_PYSIDEUIC_WPL} ${src})
        else()
            set(FREECAD_LIBPACK_PYSIDEUIC_OTH ${FREECAD_LIBPACK_PYSIDEUIC_OTH} ${src})
        endif()
        set(FREECAD_LIBPACK_PYSIDEUIC_ABS ${FREECAD_LIBPACK_PYSIDEUIC_ABS} ${src})
        set(out "${CMAKE_BINARY_DIR}/lib/${it}")
        add_custom_command(
            DEPENDS   ${src}
            OUTPUT    ${out}
            COMMAND   ${CMAKE_COMMAND}
            ARGS      -E copy_if_different ${src} ${out}
            MAIN_DEPENDENCY ${src}
            COMMENT   "Copy file to ${out}"
    )
    endforeach (it)
    SOURCE_GROUP("PySide tools" FILES ${FREECAD_LIBPACK_PYSIDEUIC_OTH})
    SOURCE_GROUP("PySide tools\\pysideuic" FILES ${FREECAD_LIBPACK_PYSIDEUIC_TOP})
    SOURCE_GROUP("PySide tools\\pysideuic\\Compiler" FILES ${FREECAD_LIBPACK_PYSIDEUIC_CMP})
    SOURCE_GROUP("PySide tools\\pysideuic\\port_v2" FILES ${FREECAD_LIBPACK_PYSIDEUIC_PV2})
    SOURCE_GROUP("PySide tools\\pysideuic\\port_v3" FILES ${FREECAD_LIBPACK_PYSIDEUIC_PV3})
    SOURCE_GROUP("PySide tools\\pysideuic\\widget-plugins" FILES ${FREECAD_LIBPACK_PYSIDEUIC_WPL})

    # Python extension modules
    foreach (it ${FREECAD_LIBPACK_PYTHON})
        get_filename_component(libfile ${it} NAME)
        set(out "${CMAKE_BINARY_DIR}/lib/${libfile}")
        add_custom_command(
            DEPENDS   ${it}
            OUTPUT    ${out}
            COMMAND   ${CMAKE_COMMAND}
            ARGS      -E copy_if_different ${it} ${out}
            MAIN_DEPENDENCY ${it}
            COMMENT   "Copy file to ${out}"
    )
    endforeach (it)
    SOURCE_GROUP("Python" FILES ${FREECAD_LIBPACK_PYTHON})

    set(FREECAD_LIBPACK_FILES
        ${FREECAD_LIBPACK_PIVY_COIN}
        ${FREECAD_LIBPACK_SHIBOKEN}
        ${FREECAD_LIBPACK_PYSIDE}
        ${FREECAD_LIBPACK_PYSIDEUIC_ABS}
        ${FREECAD_LIBPACK_PYTHON}
    )
    add_custom_target(LibPack_Files2 ALL SOURCES ${FREECAD_LIBPACK_FILES})

endif(WIN32 AND FREECAD_LIBPACK_USE)

INSTALL(
    FILES
        ${Addons_Files}
    DESTINATION
        ${CMAKE_INSTALL_ADDONDIR}
)
